slight spacing fix on card description

--- a/src/App.css
+++ b/src/App.css
@@ -883,7 +883,7 @@ p {
         font-size: 2rem;
     }
     #weather {
-        font-size: 2rem;
+        font-size: 1.8rem;
     }
     .cardDescription {
         font-size: 1.2rem;
